# laboratorio2_grx

laboratorio2_grx/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
laboratorio2_grx/archivos_ordenados/: lista_reales1_o.csv  lista_reales2_o.csv  lista_reales3_o.csv  lista_reales4_o.csv  lista_reales5_o.csv  lista_reales6_o.csv
laboratorio2_grx/include/: lib1.h  lib_grx.h
laboratorio2_grx/src/: .main.c.swp  files_ops1.c  funciones_grx.c  main.c
